oriterm_core/tests/snapshots/vttest__80x24_08_vt102_04.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
AB                                                                              
                                                                                
                                                                                
Test of 'Delete Character'. The top line should be 'AB'. Push <RETURN>
