oriterm_core/tests/snapshots/vttest__80x24_08_vt102_06.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA                                         
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB                                          
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC                                           
The right column should be staggered                                            
by one.  Push <RETURN>EEEEEEEEEEEEE                                             
FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF                                              
GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG                                               
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH                                                
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIII                                                 
JJJJJJJJJJJJJJJJJJJJJJJJJJJJJJ                                                  
KKKKKKKKKKKKKKKKKKKKKKKKKKKKK                                                   
LLLLLLLLLLLLLLLLLLLLLLLLLLLL                                                    
MMMMMMMMMMMMMMMMMMMMMMMMMMM                                                     
NNNNNNNNNNNNNNNNNNNNNNNNNN                                                      
OOOOOOOOOOOOOOOOOOOOOOOOO                                                       
PPPPPPPPPPPPPPPPPPPPPPPP                                                        
QQQQQQQQQQQQQQQQQQQQQQQ                                                         
RRRRRRRRRRRRRRRRRRRRRR                                                          
SSSSSSSSSSSSSSSSSSSSS                                                           
TTTTTTTTTTTTTTTTTTTT                                                            
UUUUUUUUUUUUUUUUUUU                                                             
VVVVVVVVVVVVVVVVVV                                                              
WWWWWWWWWWWWWWWWW                                                               
XXXXXXXXXXXXXXXX
