oriterm_core/tests/snapshots/vttest__80x24_08_vt102_10.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
A**********************************************************************************************************************************B
                                                                                                                                    
                                                                                                                                    
Test of 'Insert Mode'. The top line should be 'A*** ... ***B'. Push <RETURN>
