oriterm_core/tests/snapshots/vttest__80x24_08_vt102_11.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
B                                                                               
***************************************************                             
                                                                                
Test of 'Delete Character'. The top line should be 'AB'. Push <RETURN>
